# Changelog

[Unreleased]
### Added
- log-output base on the logger of libKitsundePersistence
- ConnectionTrigger to handle incoming connections on server-side

### Changed
- socket on client-side have to be init manually to get return value
- socket-constructors for server-side are now private 
- renamed NetworkTrigger to MessageTrigger


## [0.3.0] - 2019-09-09

### Added
- unix-sockets and -server
- ssl encrypted tcp-socket and -server
- readme-file
- build-script

### Changed
- renamed clients to sockets
- usage of inheritance internally

### Fixed
- removed warnings


## [0.2.1] - 2019-08-19

### Fixed
- fixed include-paths to be usable in other projects


## [0.2.0] - 2019-08-17

### Changed
- changed file-names for better readable


## [0.1.0] - 2019-08-07

### Added
- tcp-client and tcp-server
- ring-buffer for incoming messages
- cleanup-thread for closing connections