@@ -33,9 +33,18 @@ class AbstractSocket;
 class AbstractServer : public Kitsune::Common::Thread
 {
 public:
+    enum serverTypes {
+        UNDEFINED_TYPE = 0,
+        UNIX_SERVER = 1,
+        TCP_SERVER = 2,
+        TLS_TCP_SERVER = 3
+    };
+
     AbstractServer(MessageTrigger* messageTrigger,
                    ConnectionTrigger* connectionTrigger);
     ~AbstractServer();
+
+    serverTypes getType();
 
     virtual AbstractSocket* waitForIncomingConnection() = 0;
     bool closeServer();
@@ -51,6 +60,7 @@ protected:
     void run();
 
     int m_serverSocket = 0;
+    serverTypes m_type = UNDEFINED_TYPE;
 
     MessageTrigger* m_messageTrigger;
     ConnectionTrigger* m_connectionTrigger;
